# adapter-console

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.devcontainer/: devcontainer.json
nonebot/adapters/console/: __init__.py  adapter.py  backend.py  bot.py  config.py  event.py  exception.py  message.py  utils.py
nonebot/adapters/console/frontend/: app.css  app.py  log_redirect.py
nonebot/adapters/console/frontend/components/: footer.py  header.py
nonebot/adapters/console/frontend/components/chatroom/: __init__.py  history.py  input.py  message.py  toolbar.py
nonebot/adapters/console/frontend/components/general/: action.py
nonebot/adapters/console/frontend/components/log/: __init__.py  toolbar.py
nonebot/adapters/console/frontend/router/: router.py
nonebot/adapters/console/frontend/storage/: __init__.py
nonebot/adapters/console/frontend/views/: chatroom.py  horizontal.py  log_view.py
nonebot/adapters/console/terminal/: __init__.py  app.py
nonebot/adapters/console/terminal/body/: __init__.py
nonebot/adapters/console/terminal/body/views/: __init__.py  chat.py  logger.py
nonebot/adapters/console/terminal/footer/: __init__.py
nonebot/adapters/console/terminal/header/: __init__.py
nonebot/adapters/console/terminal/widgets/: client.py  header.py  input.py  logger.py  right.py
