[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "nonebot-adapter-console"
version = "0.4.0"
description = "console adapter for nonebot2"
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"},
    {name = "MelodyKnit",email = "yanximelody@gmail.com"},
    {name = "yanyongyu",email = "yyy@nonebot.dev"},
]
dependencies = [
    "nonechat<1.0.0,>=0.2.0",
    "nonebot2<3.0.0,>=2.2.0",
    "pydantic>=1.10.0,<3.0.0,!=2.5.0,!=2.5.1",
    "typing-extensions>=4.7.1",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.build]
includes = ["nonebot"]

[tool.pdm.dev-dependencies]
dev = [
    "isort<5.11,>=5.10.1",
    "black<25.0,>=24.0.0",
    "nonemoji<0.2,>=0.1.3",
    "pre-commit<3.2,>=3.1.0",
    "ruff~=0.2.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E402"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
