[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "nonebot-adapter-console"
version = "0.7.0"
description = "console adapter for nonebot2"
authors = [
  { name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com" },
  { name = "MelodyKnit", email = "yanximelody@gmail.com" },
  { name = "yanyongyu", email = "yyy@nonebot.dev" },
]
dependencies = [
    "nonechat<0.5.0,>=0.4.1",
    "nonebot2>=2.4.2",
    "typing-extensions>=4.7.1",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.build]
includes = ["nonebot"]

[tool.pdm.dev-dependencies]
dev = [
    "isort==5.13.2",
    "black>=24.4.2",
    "loguru>=0.7.2",
    "ruff>=0.4.2",
    "nonemoji<0.2,>=0.1.3",
    "pre-commit<4.0,>=3.1.0",
]

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E402"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
